<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectedEventActivity1">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">



            <ImageView
                android:id="@+id/ivSelectedActivityPhoto"
                style="@style/ivSelectedViewPhoto"
                android:src="@drawable/image" />


            <TextView
                android:id="@+id/name"
                style="@style/tvSelectedActivityContent"
                android:text="@string/barcelona_game"
                />

            <TextView
                style="@style/tvSelectedActivityLabel"
                android:text="@string/locationLabel"
                />

            <TextView
                android:id="@+id/tvSelectedActivityLocation"
                style="@style/tvSelectedActivityContent"
                android:text="@string/locationLabel"
                />

            <TextView
                style="@style/tvSelectedActivityLabel"
                android:text="@string/costLabel"
                 />

            <TextView
                android:id="@+id/tvSelectedActivityCost"
                style="@style/tvSelectedActivityContent"
                android:text="@string/costValue"
                />

            <TextView

                style="@style/tvSelectedActivityLabel"
                android:text="@string/dateLabel"
                />

            <TextView
                android:id="@+id/tvSelectedActivityDate"
                style="@style/tvSelectedActivityContent"
                android:text="30/04/2015"
                />
            <TextView

                style="@style/tvSelectedActivityLabel"
                android:text="Time:"
                />

            <TextView
                android:id="@+id/tvSelectedActivitytime"
                style="@style/tvSelectedActivityContent"
                android:text="12:00pm"
                />

            <TextView
                style="@style/tvSelectedActivityLabel"
                android:text="@string/descriptionLabel" />



            <TextView
                android:id="@+id/tvSelectedActivityDescription"
                style="@style/etDescriptionStyle"
                android:text="you can reserve your ticket from : (www.reserv.com)
             the match will start at 06:00 pm"

                />
            <Button
                android:id="@+id/btSelectActivityEdit"
                style="@style/btEditStyle"
                android:text="@string/edit"
                />



            <TextView
                style="@style/tvSelectedActivityCommentTitle"
                android:text="@string/commentsLabel"

                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="left"
                    android:src="@drawable/ab"


                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Amazing !!!"
                    android:textSize="15sp"

                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="left"
                    android:src="@drawable/ac"


                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="oooh Thanks !! "
                    android:textSize="15sp"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="left"
                    android:src="@drawable/ad"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="can you please put another tickets costs"
                    android:textSize="15sp"

                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ani"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:hint="but your comment her"
                    android:textSize="15sp"

                    />
            </LinearLayout>


        </LinearLayout>

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

    </RelativeLayout>
    </ScrollView>



</android.support.constraint.ConstraintLayout>